[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/core/ViewportCardFocus.gd" type="Script" id=1]
[ext_resource path="res://src/core/DetailPanels.gd" type="Script" id=2]
[ext_resource path="res://src/core/MainWorld.tres" type="Environment" id=3]

[node name="Main" type="Node2D"]
self_modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 720, 1280 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
anchor_mode = 0
current = true

[node name="VBC" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 470.0
rect_min_size = Vector2( 340, 460 )
mouse_filter = 2

[node name="Focus" type="ViewportContainer" parent="VBC"]
margin_right = 340.0
margin_bottom = 460.0
rect_min_size = Vector2( 340, 460 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="VBC/Focus"]
size = Vector2( 340, 460 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="VBC/Focus/Viewport"]
anchor_mode = 0
current = true

[node name="Tween" type="Tween" parent="VBC/Focus"]

[node name="FocusInfo" type="GridContainer" parent="VBC"]
margin_top = 470.0
margin_right = 340.0
margin_bottom = 470.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[connection signal="size_changed" from="ViewportContainer/Viewport" to="." method="_on_Viewport_size_changed"]
